created utility functions for loading pdfs for Chroma. 1) for searching the pdf for chapter titles while loading the documents for the metadata. 2) for loading chapter pages defined in a json file from multiple books. moving constant variables like DATA_PATH to config.yaml

--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,5 @@
+DATA_PATH: ./data/books
+CHROMA_PATH: ./chroma
 system_prompt: |
                   ### **Structured Prompt for a Tolkien Lore RAG Chatbot**
 
